--- a/quickstart/component.html
+++ b/quickstart/component.html
@@ -19,6 +19,11 @@
         <todo-item v-for="item in sites" v-bind:todo="item"></todo-item>
     </ol>
 </div>
+<div id="counter-event-example">
+    <p>{{ total }}</p>
+    <button-counter v-on:increment="incrementTotal"></button-counter>
+    <button-counter v-on:increment="incrementTotal"></button-counter>
+</div>
 <script>
     //全局组件
     Vue.component('runoob',{
@@ -60,6 +65,32 @@
             'mycomp': Child
         }
     });
+
+    Vue.component('button-counter', {
+        template: '<button v-on:click="incrementHandler">{{ counter }}</button>',
+        data: function () {
+            return {
+                counter: 0
+            };
+        },
+        methods: {
+            incrementHandler: function () {
+                this.counter += 1;
+                this.$emit('increment')
+            }
+        }
+    });
+    new Vue({
+        el: '#counter-event-example',
+        data: {
+            total: 0
+        },
+        methods: {
+            incrementTotal: function () {
+                this.total += 1
+            }
+        }
+    })
 
 </script>
 </body>
